# CarbonDioxideAnalyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
carbonDioxideAnalyzerLib/: CMakeLists.txt
carbonDioxideAnalyzerLib/include/: ComponentManager.hpp  Cpu.hpp  GuiMonitoring.hpp  HwMachine.hpp  Ram.hpp  SynchronizedQueue.hpp
carbonDioxideAnalyzerLib/src/: ComponentManager.cpp  Cpu.cpp  GuiMonitoring.cpp  HwMachine.cpp  Ram.cpp  SynchronizedQueue.cpp
carbonDioxideAnalyzerLib/utility/: Units.hpp
carbonDioxideAnalyzerLib/utlity/: Units.hpp
carbonDioxideGuiMonitoringLib/: CMakeLists.txt
carbonDioxideGuiMonitoringLib/inlcude/: PerformancePlotter.hpp
carbonDioxideGuiMonitoringLib/src/: PerformancePlotter.cpp
include/: Cpu.hpp  HwMachine.hpp
unitTest/: CMakeLists.txt
unitTest/src/: mockComponentManager.cpp
